<resources>
    <string name="app_name">Edgars Bill Tracker</string>
    <string name="server_client_id"></string>
    <string name="signin">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="title_activity_home">Enter Bill</string>
    <string name="title_home">Enter bill</string>
    <string name="title_report">Report</string>
    <string name="title_logout">Logout</string>
    <string name="amount">Amount</string>
    <string name="title_activity_bill_list">Bill List</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_base_logged_in">BaseLoggedInActivity</string>
</resources>
