<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_activity_bill_list" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@android:drawable/ic_menu_report_image"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_logout" />

</menu>
